Added reading json to canreader, set main for testing json, added gears(?) to decoding file

--- a/RaspberryPiScripts/config.json
+++ b/RaspberryPiScripts/config.json
@@ -6,9 +6,9 @@
         "topic": "toyota"
     },
     "can": {
-        "interface": "socketcan",
-        "channel": "can0",
-        "delay": 0,
+        "interface": "file",
+        "channel": "can_dump_2025-03-18T14_31_26.798219.json",
+        "delay": 0.05,
         "database": "toyota_rav4_hybrid_2017_pt_generated.dbc"
     }
 }
